--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,3 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>To-Do lists</title>
+<h1>Your To-Do list</h1>
+<input id="id_new_item" placeholder="Enter a to-do item">
+<table id="id_list_table"></table>
