--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>To-Do lists</title>
-<h1>Your To-Do list</h1>
+<h1>Start a new To-Do list</h1>
 <form method="POST">
     <input name="item-text" id="id-new-item" placeholder="Enter a to-do item">
     {% csrf_token %}
 </form>
-<table id="id-list-table">
-    {% for item in items %}
-        <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-    {% endfor %}
-</table>
