--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -2,12 +2,12 @@
 <meta charset="utf-8">
 <title>To-Do lists</title>
 <h1>Your To-Do list</h1>
-<form method="POST" action="/lists/new">
+<form method="POST" action="/lists/{{ list.id }}/add-item">
     <input name="item-text" id="id-new-item" placeholder="Enter a to-do item">
     {% csrf_token %}
 </form>
 <table id="id-list-table">
-    {% for item in items %}
+    {% for item in list.item_set.all %}
         <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
     {% endfor %}
 </table>
