--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<title>To-Do lists</title>
-<h1>Start a new To-Do list</h1>
-<form method="POST" action="/lists/new">
-    <input name="item-text" id="id-new-item" placeholder="Enter a to-do item">
-    {% csrf_token %}
-</form>
+{% extends 'base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
