--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<title>To-Do lists</title>
-<h1>Your To-Do list</h1>
-<form method="POST" action="/lists/{{ list.id }}/add-item">
-    <input name="item-text" id="id-new-item" placeholder="Enter a to-do item">
-    {% csrf_token %}
-</form>
-<table id="id-list-table">
-    {% for item in list.item_set.all %}
-        <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-    {% endfor %}
-</table>
+{% extends 'base.html' %}
+
+{% block header_text %}Your To-Do list{% endblock %}
+
+{% block form_action %}/lists/{{ list.id }}/add-item{% endblock %}
+
+{% block table %}
+    <table id="id-list-table">
+        {% for item in list.item_set.all %}
+            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+        {% endfor %}
+    </table>
+{% endblock %}
