--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -5,7 +5,7 @@
 {% block form_action %}/lists/{{ list.id }}/add-item{% endblock %}
 
 {% block table %}
-    <table id="id-list-table">
+    <table id="id-list-table" class="table">
         {% for item in list.item_set.all %}
             <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
         {% endfor %}
