--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,3 +36,6 @@
     </div>
 
 </div>
+<script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+<script src="qunit-1.23.1.js"></script>
+<script src="{% static 'js/list.js' %}"></script>
